Page 10122 fix alignment for start a discussion dropdown

--- a/css/site_pages.css
+++ b/css/site_pages.css
@@ -9499,9 +9499,8 @@ ul.folder-list li.folder
 	display:none;
 }
 
-.page_10122 .dropper
-{
-	padding-left:680px !important;
+.page_10122 .dropper {
+
 }
 
 .reviews_upload_photos
